--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,7 +1,26 @@
 <resources>
     <string name="app_name">Hike.io Clone</string>
-
-    <string name="hello_world">Hello world!</string>
     <string name="action_settings">Settings</string>
+    <string name="action_search">Search</string>
+    <string name="drawer_open">Open</string>
+    <string name="drawer_close">Close</string>
+
+    <string name="nav_item_home">Home</string>
+    <string name="nav_item_discover">Discover</string>
+    <string name="nav_item_pin">Map</string>
+    <string name="nav_item_add">Add</string>
+
+
+    <!-- navigation drawer item labels  -->
+    <string-array name="nav_drawer_labels">
+        <item>@string/nav_item_home</item>
+        <item>@string/nav_item_discover</item>
+        <item>@string/nav_item_pin</item>
+        <item>@string/nav_item_add</item>
+    </string-array>
+
+    <string name="title_home">Home</string>
     <string name="title_activity_maps">Map</string>
+    <string name="map">map!</string>
+
 </resources>
