--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -22,5 +22,10 @@
     <string name="title_home">Home</string>
     <string name="title_activity_maps">Map</string>
     <string name="map">map!</string>
+    <string name="title_activity_add_hike">Add a hike</string>
+
+    <string name="hello_world">Hello world!</string>
+    <string name="addHike">Add a hike</string>
+    <string name="go">Go!</string>
 
 </resources>
